# ann

./: CMakeLists.txt  ann.cpp  ann.h  filereader.cpp  filereader.h  main.cpp  mainwindow.cpp  mainwindow.h  networkview.cpp  networkview.h  neuronlayer.cpp  neuronlayer.h  neuronnetwork.cpp  neuronnetwork.h  trainingexample.h  vectorview.cpp  vectorview.h
